RESOLVED FIXED277151
Don't consider an empty array of DNR rule resources a parsing error
https://bugs.webkit.org/show_bug.cgi?id=277151
Summary Don't consider an empty array of DNR rule resources a parsing error
Brian Weinstein
Reported 2024-07-26 10:45:25 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-26 10:45:34 PDT
Brian Weinstein
Comment 2 2024-07-26 10:50:26 PDT
EWS
Comment 3 2024-07-26 14:25:57 PDT
Committed 281416@main (20549e656a50): <https://commits.webkit.org/281416@main> Reviewed commits have been landed. Closing PR #31301 and removing active labels.
EWS
Comment 4 2024-07-29 07:03:14 PDT
Committed 280938.138@safari-7619-branch (9e62c0b32a2f): <https://commits.webkit.org/280938.138@safari-7619-branch> Reviewed commits have been landed. Closing PR #1504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.