Cherry-pick 20549e656a50. rdar://130861213

Don't consider an empty array of DNR rule resources a parsing error
    https://bugs.webkit.org/show_bug.cgi?id=277151
    rdar://130861213

    Reviewed by Timothy Hatcher.

    * Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionCocoa.mm:
    (WebKit::WebExtension::populateDeclarativeNetRequestPropertiesIfNeeded): We shouldn't pass `emptyIfNil` to
    the `objectForKey` call parsing the declarativeNetRequest rulesets. This led to a reported parsing error when
    passing an empty array of rulesets like the "Unagent" extension did.

    Canonical link: https://commits.webkit.org/281416@main

Canonical link: https://commits.webkit.org/280938.138@safari-7619-branch